--- a/RollingPaper/RollingPaper/PencilcaseController.xib
+++ b/RollingPaper/RollingPaper/PencilcaseController.xib
@@ -813,22 +813,6 @@
 								<float key="scoringTypeFloat">40</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="313141277">
-								<reference key="firstItem" ref="87055157"/>
-								<int key="firstAttribute">8</int>
-								<int key="relation">0</int>
-								<nil key="secondItem"/>
-								<int key="secondAttribute">0</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">50</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="87055157"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">1</int>
-							</object>
 						</array>
 						<reference key="parent" ref="864168657"/>
 					</object>
@@ -947,22 +931,6 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="999070301">
-								<reference key="firstItem" ref="73092609"/>
-								<int key="firstAttribute">4</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="356012474"/>
-								<int key="secondAttribute">4</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="356012474"/>
-								<int key="scoringType">8</int>
-								<float key="scoringTypeFloat">29</float>
-								<int key="contentType">3</int>
-							</object>
 							<object class="IBNSLayoutConstraint" id="503661209">
 								<reference key="firstItem" ref="73092609"/>
 								<int key="firstAttribute">3</int>
@@ -1065,11 +1033,6 @@
 						<reference key="parent" ref="356012474"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">239</int>
-						<reference key="object" ref="999070301"/>
-						<reference key="parent" ref="356012474"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">240</int>
 						<reference key="object" ref="453814908"/>
 						<reference key="parent" ref="356012474"/>
@@ -1078,11 +1041,6 @@
 						<int key="objectID">241</int>
 						<reference key="object" ref="800492198"/>
 						<reference key="parent" ref="356012474"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">245</int>
-						<reference key="object" ref="313141277"/>
-						<reference key="parent" ref="87055157"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">248</int>
@@ -1244,8 +1202,7 @@
 				</array>
 				<boolean value="NO" key="201.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="206.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="206.IBViewMetadataConstraints">
-					<reference ref="313141277"/>
+				<array class="NSMutableArray" key="206.IBViewMetadataConstraints">
 					<reference ref="607815958"/>
 					<reference ref="952314118"/>
 				</array>
@@ -1264,11 +1221,10 @@
 				<boolean value="NO" key="212.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="216.CustomClassName">ColorPalette</string>
 				<string key="216.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="216.IBViewMetadataConstraints">
+				<array class="NSMutableArray" key="216.IBViewMetadataConstraints">
 					<reference ref="14246002"/>
 					<reference ref="575237433"/>
 					<reference ref="503661209"/>
-					<reference ref="999070301"/>
 					<reference ref="453814908"/>
 					<reference ref="800492198"/>
 				</array>
@@ -1284,10 +1240,8 @@
 				<string key="236.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="237.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="238.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="239.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="240.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="241.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="245.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="248.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="251.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="253.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1347,11 +1301,11 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="bottomBar.png">{640, 94}</string>
-			<string key="clearButton.png">{66, 66}</string>
-			<string key="colorPalleteBackground.png">{523, 134}</string>
-			<string key="okButton.png">{65, 66}</string>
-			<string key="undoButton.png">{67, 66}</string>
+			<string key="bottomBar.png">{320, 47}</string>
+			<string key="clearButton.png">{33, 33}</string>
+			<string key="colorPalleteBackground.png">{262, 67}</string>
+			<string key="okButton.png">{33, 33}</string>
+			<string key="undoButton.png">{34, 33}</string>
 		</dictionary>
 		<bool key="IBDocument.UseAutolayout">YES</bool>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
